# twinsong

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json
.github/workflows/: build.yml
browser/ui/: build.sh  index.html  package-lock.json  package.json  vite.config.ts
browser/ui/src/: App.css  App.tsx
browser/ui/src/components/: Dialog.tsx  DirList.tsx  EditorPanel.tsx  EditorToolbar.tsx  ErrorScreen.tsx  GlobalTabs.tsx  LoadingScreen.tsx  NotebookList.tsx  NotebookView.tsx  NotificationProvider.tsx  ObjectTreeNode.tsx  OutputCell.tsx  PopupMenu.tsx  ResizibleColumns.tsx  RunTabs.tsx  RunView.tsx  StateProvider.tsx  StatusIndicator.tsx  Workspace.tsx  WsProvider.tsx
browser/ui/src/core/: actions.ts  jobject.ts  messages.ts  notebook.ts  state.ts
browser/ui/src/types/: prism-core.d.ts
comm/: Cargo.toml
comm/src/: lib.rs  messages.rs  protocol.rs
common/: Cargo.toml
common/src/: lib.rs  messages.rs
pytwinsong/: Cargo.toml  pyproject.toml
pytwinsong/python/twinsong/: __main__.py
pytwinsong/python/twinsong/driver/: __main__.py  run.py  storage.py
pytwinsong/src/: control.rs  executor.rs  jobject.rs  lib.rs  scopes.rs  stdio.rs
rpykernel/: Cargo.toml  pyproject.toml
rpykernel/python/rpykernel/: __main__.py
rpykernel/src/: control.rs  lib.rs
rsjp/: Cargo.toml
rsjp/src/: http.rs  main.rs  notebook.rs  reactor.rs  state.rs
tests/: conftest.py  requirements-tests.txt  requirements.txt  test_http.py  test_jobject.py  utils.py
twinsong/: Cargo.toml
twinsong/src/: cli.rs  client_messages.rs  http.rs  kernel.rs  lib.rs  main.rs  notebook.rs  reactor.rs  state.rs  storage.rs
twinsong/src/utils/: ids.rs
