[package]
name = "comm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["serde_derive"] }
anyhow = { workspace = true }
tokio-util = { version = "0.7", features = ["full"] }
bincode = "1.3"
uuid = { version = "1.13.1", features = ["v4"] }
