[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "twinsong"
authors = [{name = "Ada Böhm", email = "ada@kreatrix.org"}]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[project.scripts]
twinsong = "twinsong.twinsong:start_server"
