[package]
name = "twinsong"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
axum = { version = "0.8", features = ["ws"] }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true, features = ["tokio-io", "sink"] }
serde_json = "1.0.138"
clap = { version = "4.5", features = ["derive"] }
comm = { path = "../comm" }
which = "7.0"
ctrlc = "3.4"
